2013-01-05  Russ Allbery  <rra@stanford.edu>

	* Makefile.PL: Declare the required version of Perl.  Remove
	File::Spec dependency that's satisfied by that Perl version.
	Declare the package license.

	* set-version: New script to substitute the distribution version
	into the modules that make up the distribution.
	* Makefile.PL: Use set-version as a filter when building modules
	for installation.
	* lib/Pod/Thread.pm: Replace version with 0.0, since it will be
	replaced by set-version.

	* scripts/pod2thread: Add all supported command-line options to
	SYNOPSIS and standardize the formatting.

	* t/synopsis.t: New test for the syntax of SYNOPSIS code.

	* t/minimum-version.t: New test for the minimum required version
	of Perl.

	* scripts/pod2thread: Update coding style and formatting.
	* t/basic.t: Likewise.
	* t/critic.t: New test of coding style in all Perl code.
	* t/data/perlcriticrc: Test configuration for perlcritic.
	* t/data/perltidyrc: Test configuration for perltidy.

	* Makefile.PL: Remove conditionals on Perl 5.005, since Perl 5.8
	is now required.  Use angle brackets around my email address.
	Update coding style and formatting.

	* scripts/pod2thread: Remove the code to generate the #! line and
	supporting code and instead rely on ExtUtils::MakeMaker to handle
	that during package build.
	* scripts/pod2thread.PL: Renamed to pod2thread.
	* Makefile.PL: Remove PL_FILES and realclean.

	* lib/Pod/Thread.pm: Largely rewritten to use Pod::Simple and to
	update the coding style.  Now also requires the Readonly module.
	This fixes a long-standing bug in formatting an =item that looks
	numeric but is intended to be text.
	* t/basic.t: Parsers can no longer be used for more than one
	document.  Add new test for text =item that looks numeric.
	* Makefile.PL: Add Readonly to prerequisites and replace
	Pod::Parser with Pod::Simple.

2013-01-04  Russ Allbery  <rra@stanford.edu>

	* t/pod.t: New test for POD syntax.