@@ -5,4 +5,5 @@
 /Pod-Thread-*.tar.gz
 /Pod-Thread-*.tar.gz.asc
 /blib
+/cover_db/
 /pm_to_blib
